# black-hole-rasterizer

./: .gitignore  CMakeLists.txt  FindGfxLibs.cmake  README.md
resources/blackhole/: black_hole_grid_calculator.py  black_hole_rasterize.py  black_hole_ray.py  blackhole_32_32_32_32_32.txt  blackhole_8_8_8_8_8.txt
resources/shaders/: blinn_phong_frag.glsl  normal_frag.glsl  simple_vert.glsl  tex_blinn_phong_frag.glsl  tex_coord_frag.glsl
src/: Material.cpp  Material.h  Model.cpp  Model.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Spline.cpp  WindowManager.cpp  WindowManager.h  main.cpp
website/: index.html
